Fix starfish blocking interaction with covered elements

--- a/public/CSS/LoanGUI.css
+++ b/public/CSS/LoanGUI.css
@@ -214,4 +214,5 @@ select{
   opacity: .11;
   background: none;
   display: block;
+  pointer-events: none;
 }
